# Runze_control_v2

./: LICENSE  README.md
runze-control-main/: GUI  README.md  pyproject.toml
runze-control-main/docs/source/: conf.py  index.rst
runze-control-main/examples/mini_sy04/: cancel_action.py  change_speed.py  connect_and_log.py  move_demo.py
runze-control-main/examples/smart_sv04_multiport/: connect_and_log.py
runze-control-main/examples/sy01b/: cancel_action.py  connect_and_log.py
runze-control-main/examples/sy08/: cancel_action.py  change_speed.py  connect_and_log.py  move_demo.py  test_recv_serial_chars.py
runze-control-main/src/runze_control/: dt_protocol.py  multichannel_syringe_pump.py  oem_protocol.py  protocol.py  rotary_valve.py  runze_device.py  runze_protocol.py  sv_device_codes.py  syringe_pump.py
runze-control-main/src/runze_control.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
runze-control-main/src/runze_control/protocol_codes/: common_codes.py  mini_sy04_codes.py  rotary_valve_codes.py  sy01_codes.py  sy08_codes.py  syringe_pump_codes.py
